Add SuperSu to settings dashboard *used root icon from purenexus marshmallow
Change-Id: I1c088aab1756be7e11a159f7c665fd0bfadd3022

Conflicts:
	res/values/purenexus_strings.xml
	src/com/android/settings/Settings.java
	src/com/android/settings/SettingsActivity.java

--- a/res/values/orion_strings.xml
+++ b/res/values/orion_strings.xml
@@ -142,4 +142,8 @@
      <!-- One handed mode -->
      <string name="one_handed_mode_title">One handed mode</string>
      <string name="one_handed_mode_summary">Allows swiping on the navigation bar to enable one handed mode</string>
+     
+     <!-- Custom Dashboard Tiles -->
+     <string name="supersu_title">SuperSU</string>
+     <string name="supersu_summary">Manage root permissions</string>
 </resources>
