--- a/res/values/orion_strings.xml
+++ b/res/values/orion_strings.xml
@@ -45,4 +45,6 @@
     <string name="hardware_keys_action_launch_camera">Open camera</string>
     <string name="hardware_keys_action_last_app">Launch last app</string>
 
+  <!-- Dev Options Enabled by Default -->
+    <string name="show_dev_already_enabled">No need, Developer settings are enabled by default.</string>
 </resources>
