--- a/res/values/orion_strings.xml
+++ b/res/values/orion_strings.xml
@@ -6,4 +6,8 @@
 
      <!-- Local (desktop) backup password menu title [CHAR LIMIT=25] -->
      <string name="local_backup_password_title">Desktop backup password</string>
+
+     <!-- Advanced reboot options -->
+     <string name="advanced_reboot_title">Advanced reboot</string>
+     <string name="advanced_reboot_summary">When unlocked, include options in the power menu for rebooting into recovery, bootloader or performing a soft reboot</string>
 </resources>
