--- a/res/values/orion_strings.xml
+++ b/res/values/orion_strings.xml
@@ -132,4 +132,10 @@
      <!-- Double tap-to-sleep -->
      <string name="double_tap_to_sleep_title">Double-tap to sleep</string>
      <string name="double_tap_to_sleep_summary">Double-tap on the status bar to turn off the display</string>
+
+     <!-- Wakeup section under Display settings -->
+     <string name="wakeup_section_header">Wake up</string>
+     <!-- Volume rocker wake -->
+     <string name="volume_rocker_wake_title">Volume rocker wake</string>
+     <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
 </resources>
