--- a/res/values/orion_strings.xml
+++ b/res/values/orion_strings.xml
@@ -22,4 +22,8 @@
      <!-- Configure notifications > low battery pulse option -->
      <string name="low_battery_pulse_title">Low battery</string>
      <string name="low_battery_pulse_summary">Pulse when battery is low</string>
+
+     <!-- UI dashboard category -->
+     <string name="ui_settings_title">Universe</string>
+     <string name="keywords_orion_ui">systemui statusbar navigationbar</string>
 </resources>
