Dashboard: Orion UI Settings
Forward port of Krexus "SystemUI" dashboard tile

* Initial bringup
* AndroidManifest changes to make it externally launchable
* Renamed to "Interface" (better UX, not only for geeks)
* New frameworks/support preferences stubs
* MetricsLogger changed to MetricsEvent
* MultiUser compatible (not restricted)

Adapted for Orion

Conflicts:
	res/values/orion_strings.xml

--- a/res/values/orion_strings.xml
+++ b/res/values/orion_strings.xml
@@ -63,4 +63,8 @@
   <!-- Advanced reboot options -->
     <string name="advanced_reboot_title">Advanced reboot</string>
     <string name="advanced_reboot_summary">When unlocked, include options in the power menu for rebooting into recovery, bootloader or performing a soft reboot</string>
+
+  <!-- UI dashboard category -->
+    <string name="ui_settings_title">Universe</string>
+    <string name="keywords_orion_ui">systemui statusbar navigationbar</string>
 </resources>
