--- a/res/values/orion_strings.xml
+++ b/res/values/orion_strings.xml
@@ -3,4 +3,7 @@
 
      <!-- Dev Options Enabled by Default -->
      <string name="show_dev_already_enabled">No need, Developer settings are enabled by default.</string>
+
+     <!-- Local (desktop) backup password menu title [CHAR LIMIT=25] -->
+     <string name="local_backup_password_title">Desktop backup password</string>
 </resources>
