--- a/res/values/orion_strings.xml
+++ b/res/values/orion_strings.xml
@@ -146,4 +146,6 @@
      <!-- Custom Dashboard Tiles -->
      <string name="supersu_title">SuperSU</string>
      <string name="supersu_summary">Manage root permissions</string>
+     <string name="substratum_title">Substratum</string>
+     <string name="substratum_summary">Customize device theme</string>
 </resources>
