--- a/res/values/orion_strings.xml
+++ b/res/values/orion_strings.xml
@@ -148,4 +148,5 @@
      <string name="supersu_summary">Manage root permissions</string>
      <string name="substratum_title">Substratum</string>
      <string name="substratum_summary">Customize device theme</string>
+     <string name="superuser_title">Superuser</string>
 </resources>
