One handed mode toggle (2/2)
Conflicts:
	res/values/krexus_strings.xml

--- a/res/values/orion_strings.xml
+++ b/res/values/orion_strings.xml
@@ -138,4 +138,8 @@
      <!-- Volume rocker wake -->
      <string name="volume_rocker_wake_title">Volume rocker wake</string>
      <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
+
+     <!-- One handed mode -->
+     <string name="one_handed_mode_title">One handed mode</string>
+     <string name="one_handed_mode_summary">Allows swiping on the navigation bar to enable one handed mode</string>
 </resources>
