Add global toggle for peeking notifications
Change-Id: I54b2143445ee313fd87a06bfd37598378859e2e3
(cherry picked from commit 981298948b86c56be02518c80cbe0723c0a50e3d)

Conflicts:
	res/values/pa_strings.xml

--- a/res/values/orion_strings.xml
+++ b/res/values/orion_strings.xml
@@ -159,4 +159,7 @@
      <!-- CAF Version -->
      <string name="version_title">CAF Version</string>
      <string name="version_default">Unknown</string>
+   
+     <!-- Heads-up notifications -->
+     <string name="heads_up_notifications_title">Peeking notifications</string>
 </resources>
