--- a/res/xml/configure_notification_settings.xml
+++ b/res/xml/configure_notification_settings.xml
@@ -40,6 +40,11 @@
             android:summary="@string/low_battery_pulse_summary"
             android:defaultValue="true" />
 
+    <!-- Global heads up toggle -->
+    <SwitchPreference
+            android:key="heads_up_notifications"
+            android:title="@string/heads_up_notifications_title" />
+
     <!-- When device is locked -->
     <com.android.settings.notification.RestrictedDropDownPreference
             android:key="lock_screen_notifications"
