--- a/res/values/orion_strings.xml
+++ b/res/values/orion_strings.xml
@@ -155,4 +155,8 @@
      <!-- Navbar Animation -->
      <string name="pixel_navbar_anim_title">Pixel navbar animation</string>
      <string name="pixel_navbar_anim_summary">Enables the pixel navbar animation</string>
+
+     <!-- CAF Version -->
+     <string name="version_title">CAF Version</string>
+     <string name="version_default">Unknown</string>
 </resources>
