--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -20,8 +20,7 @@
       
         <!-- OrionOS logo header -->
         <PreferenceScreen android:key="orion_logo"
-                           android:enabled="false"
-                           android:layout="@layout/orion_logo_row" />
+                android:layout="@layout/about_logo_row" />         
 
         <!-- Device status - launches activity -->
         <PreferenceScreen android:key="status_info"
