--- a/res/values/orion_strings.xml
+++ b/res/values/orion_strings.xml
@@ -121,4 +121,11 @@
      <string name="quick_pulldown_off">Off</string>
      <string name="quick_pulldown_left">Left</string>
      <string name="quick_pulldown_right">Right</string>
+
+     <!-- About phone screen, Orion version -->
+     <string name="tipsy_version_title">Orion version</string>
+     <string name="tipsy_version_default">Unknown</string>
+     <!-- About phone screen, build date of ROM -->
+     <string name="build_date">Build date</string>
+     <string name="build_date_default">Unknown</string>
 </resources>
