--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -107,6 +107,12 @@
                 settings:allowDividerAbove="true"
                 settings:allowDividerBelow="true"/>
 
+        <!-- Orion firmware version -->
+        <Preference android:key="orion_version"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/orion_version_title"
+                android:summary="@string/orion_version_default"/>
+
         <!-- Device Kernel version -->
         <com.android.settings.DividerPreference
                 android:key="kernel_version"
@@ -117,6 +123,12 @@
                 android:summary="@string/device_info_default"
                 settings:allowDividerAbove="true"
                 settings:allowDividerBelow="true"/>
+
+        <!-- Build date -->
+        <Preference android:key="build_date"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/build_date"
+                android:summary="@string/build_date_default" />
 
         <!-- Detailed build version -->
         <Preference android:key="build_number"
