Revert "Repair orion logo in about phone"
This reverts commit 60f6541a5c26be15fda4c1480558fcdd6105d2c5.

--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -20,7 +20,8 @@
       
         <!-- OrionOS logo header -->
         <PreferenceScreen android:key="orion_logo"
-                android:layout="@layout/about_logo_row" />         
+                           android:enabled="false"
+                           android:layout="@layout/orion_logo_row" />
 
         <!-- Device status - launches activity -->
         <PreferenceScreen android:key="status_info"
