--- a/res/layout/orion_logo_row.xml
+++ b/res/layout/orion_logo_row.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2013 XYExperimental (Provision Team's Idea)
-     Copyright (C) 2015 AOSIP 
-        
+<!-- Copyright (C) 2015 The Tesla Project
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
@@ -16,15 +14,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center"
-    android:orientation="horizontal" >
-
+    android:gravity="center" >
         <ImageView
-            android:layout_width="625dp"
-            android:layout_height="100dp"
-            android:src="@drawable/orion"
-	    android:tint="?android:attr/colorAccent"
-            android:scaleType="centerInside"
-            android:adjustViewBounds="true" />
-   
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/orion_logo"
+         />
 </LinearLayout> 
