--- a/res/xml/orion_ui_settings.xml
+++ b/res/xml/orion_ui_settings.xml
@@ -27,6 +27,11 @@
         android:entryValues="@array/quick_pulldown_values"
         android:persistent="false" />
 
+    <com.android.settings.preference.SystemSettingSwitchPreference
+            android:key="double_tap_sleep_gesture"
+            android:title="@string/double_tap_to_sleep_title"
+            android:summary="@string/double_tap_to_sleep_summary" />
+
     </PreferenceCategory>
 
     <!-- Clock & date -->
