--- a/res/values/orion_strings.xml
+++ b/res/values/orion_strings.xml
@@ -151,4 +151,8 @@
      <string name="superuser_title">Superuser</string>
      <string name="magisk_title">Magisk manager</string>
      <string name="magisk_summary">Control modules and settings</string>
+
+     <!-- Navbar Animation -->
+     <string name="pixel_navbar_anim_title">Pixel navbar animation</string>
+     <string name="pixel_navbar_anim_summary">Enables the pixel navbar animation</string>
 </resources>
