--- a/res/xml/orion_ui_settings.xml
+++ b/res/xml/orion_ui_settings.xml
@@ -125,6 +125,13 @@
             android:summary="@string/one_handed_mode_summary"
             android:defaultValue="false" />
 
+        <com.android.settings.preferences.SystemSettingSwitchPreference
+            android:key="pixel_nav_animation"
+            android:title="@string/pixel_navbar_anim_title"
+            android:summary="@string/pixel_navbar_anim_summary"
+            android:dependency="navigation_bar_show"
+            android:defaultValue="true" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
