--- a/res/xml/orion_ui_settings.xml
+++ b/res/xml/orion_ui_settings.xml
@@ -125,7 +125,7 @@
             android:summary="@string/one_handed_mode_summary"
             android:defaultValue="false" />
 
-        <com.android.settings.preferences.SystemSettingSwitchPreference
+        <com.android.settings.preference.SystemSettingSwitchPreference
             android:key="pixel_nav_animation"
             android:title="@string/pixel_navbar_anim_title"
             android:summary="@string/pixel_navbar_anim_summary"
