--- a/res/xml/orion_ui_settings.xml
+++ b/res/xml/orion_ui_settings.xml
@@ -30,7 +30,8 @@
     <com.android.settings.preference.SystemSettingSwitchPreference
             android:key="double_tap_sleep_gesture"
             android:title="@string/double_tap_to_sleep_title"
-            android:summary="@string/double_tap_to_sleep_summary" />
+            android:summary="@string/double_tap_to_sleep_summary"
+            android:defaultValue="false" /> 
 
     </PreferenceCategory>
 
